# BeamTracer

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtutils.h  sphere.h  vec3.h
